# tp2-OS

./: .gitignore  CMakeLists.txt  README.md  autograder.py  excluded_repos_20250302_054441.txt  excluded_repos_20250302_064720.txt  excluded_repos_20250302_065315.txt  execution_log.txt  included_repos_20250302_054441.txt  included_repos_20250302_064720.txt  included_repos_20250302_065315.txt  names.txt  out2.txt  output-valgrind.txt  output.txt  production-tp2.txt  quickGit  readmeBackUp.md  scheduler  schedules.txt  scoreboard.json  shell-tp1-implementation  terces.py  token.txt
cmake/: dependencies.cmake
lib/: library.c  library.h  log.c  log.h  scheduler_alg.h  scoreboard.c  scoreboard.h
libExtern/: shell-tp1-implementation
src/: CMakeLists.txt  concurrency.c  concurrency.h  container.c  container.h  ephemeral.c  ephemeral.h  library.c  library.h  log.c  logger.c  logger.h  main.c  main.h  menu.c  menu.h  os.c  os.h  process.c  process.h  ready.c  ready.h  ready_queue.c  ready_queue.h  runner.c  runner.h  safe_calls_library.c  safe_calls_library.h  scheduler.c  scheduler.h  scoreboard.c  scoreboard.h  stats.c  stats.h  tests.c  tests.h  worker.c  worker.h
test/: basic-test.c  basic-test.h  basic-tests.c  basic-tests.h  edge-test.c  edge-test.h  external-test.c  external-test.h  hidden-test.c  hidden-test.h  modes-test.c  modes-test.h  normal-test.c  normal-test.h  test_common.c  test_common.h
